# podcaster

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: workflow.yml
data_raw/: reference.txt
docker/: Dockerfile  crontab  entrypoint.sh  run-cron.sh
finetune_qwen/: README.md  dataset.py  pyproject.toml  run.sh  train.py
scripts/: run_tts_modal.py
src/podcaster/: config.py  const.py  main.py  modal_functions.py  parser.py  storage.py  transcription.py
