[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "podcaster"
version = "23.12.6"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "modal",
  "feedparser",
  "loguru",
  "beautifulsoup4",
  "TTS",
  "boto3",
  "feedgen",
  "pydub",
]

[project.optional-dependencies]
dev = ["pytest>=7.2.0", "pytest-cov>=4.0.0", "ruff>=0.0.219"]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 79
fixable = ["ALL"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[project.scripts]
podcaster = "podcaster.main:run"
