[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "podcaster"
version = "23.12.6"
readme = "README.md"
requires-python = ">=3.9.0,<3.12"
dependencies = [
  "feedparser>=6.0.11",
  "boto3>=1.35.57",
  "loguru>=0.7.2",
  "modal==0.65.4",
  "beautifulsoup4>=4.12.3",
  "feedgen>=1.0.0",
  "humanize>=4.11.0",
  "litellm>=1.52.3",
  "F5-TTS@git+https://github.com/SWivid/F5-TTS.git@3fcdbc70b4a9d4299e1ecd0b5a1c35209f23fd69",
  "torch==2.5.1",
  "torchaudio==2.5.1",
  "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.2.0", "pytest-cov>=4.0.0", "ruff==0.5.0"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
fixable = ["ALL"]
exclude = [".env", ".venv", "venv", "notebooks"]

[project.scripts]
podcaster = "podcaster.main:run"
