[project]
name = "podcaster"
version = "23.12.6"
readme = "README.md"
requires-python = ">=3.9.0,<3.12"
dependencies = [
  "feedparser>=6.0.11",
  "boto3>=1.35.57",
  "loguru>=0.7.2",
  "modal==1.2.1",
  "feedgen>=1.0.0",
  "torch",
  "torchaudio",
  "pydub>=0.25.1",
  "nltk>=3.9.2",
  "requests>=2.32.5",
  "openai>=2.6.1",
  "tenacity>=8.0.0",
]

[dependency-groups]
dev = ["pytest>=7.2.0", "pytest-cov>=4.0.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
fixable = ["ALL"]
exclude = [".env", ".venv", "venv", "notebooks"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcaster"]
