[project]
name = "qwen-tts-finetune"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch>=2.5.0",
    "torchaudio",
    "accelerate>=1.12.0",
    "transformers>=4.57.0",
    "safetensors>=0.7.0",
    "qwen-tts>=0.1.1",
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    "matplotlib",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.4/flash_attn-2.8.3+cu130torch2.11-cp310-cp310-linux_x86_64.whl",
    "onnx-asr>=0.11.0",
    "onnxruntime-gpu>=1.23.2",
    "jiwer>=4.0.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
